[gd_scene load_steps=24 format=3 uid="uid://p30k532chmdq"]

[ext_resource type="Script" uid="uid://bim20bdqt4yld" path="res://scripts/enemies/big_aborigine/big_aborigine.gd" id="1_xyea8"]
[ext_resource type="Texture2D" uid="uid://7b80ixyf6507" path="res://assets/sprites/enemies/monsters/spear/spear_13.png" id="2_7kcsi"]
[ext_resource type="Texture2D" uid="uid://8j3j06x85uqn" path="res://assets/sprites/enemies/monsters/spear/spear_9.png" id="2_gxs31"]
[ext_resource type="Texture2D" uid="uid://b7r8ok4c2joj0" path="res://assets/sprites/enemies/monsters/spear/spear_5.png" id="2_r7lj0"]
[ext_resource type="Texture2D" uid="uid://bbmw2dbfm3ut0" path="res://assets/sprites/enemies/monsters/spear/spear_10.png" id="3_aid20"]
[ext_resource type="Texture2D" uid="uid://dsmq4ksgxty26" path="res://assets/sprites/enemies/monsters/spear/spear_6.png" id="3_jjugc"]
[ext_resource type="Texture2D" uid="uid://bvbiaf8kin41n" path="res://assets/sprites/enemies/monsters/spear/spear_14.png" id="3_r8o2p"]
[ext_resource type="Texture2D" uid="uid://cgu5gtto40dcs" path="res://assets/sprites/enemies/monsters/spear/spear_15.png" id="4_0w2yq"]
[ext_resource type="Texture2D" uid="uid://f4s0y4n1icha" path="res://assets/sprites/enemies/monsters/spear/spear_11.png" id="4_6hb6d"]
[ext_resource type="Texture2D" uid="uid://4oedp5c3nihy" path="res://assets/sprites/enemies/monsters/spear/spear_7.png" id="4_s13fs"]
[ext_resource type="Texture2D" uid="uid://c7bcen2ofnedx" path="res://assets/sprites/enemies/monsters/spear/spear_8.png" id="5_2c7xa"]
[ext_resource type="Texture2D" uid="uid://bvk1wyh200ndb" path="res://assets/sprites/enemies/monsters/spear/spear_16.png" id="5_6uft3"]
[ext_resource type="Texture2D" uid="uid://dey6wk7b3euj5" path="res://assets/sprites/enemies/monsters/spear/spear_12.png" id="5_mx1mn"]
[ext_resource type="Script" uid="uid://b340q3kpl5myu" path="res://scripts/enemies/big_aborigine/normal.gd" id="10_vovk7"]
[ext_resource type="Script" uid="uid://d146iqx8mtahs" path="res://scripts/enemies/big_aborigine/defend.gd" id="11_r8o2p"]
[ext_resource type="Script" uid="uid://dkb25vr64v37l" path="res://scripts/utils/hit_area_2d.gd" id="14_6hb6d"]
[ext_resource type="Script" uid="uid://cofkmvw2auxcs" path="res://scripts/utils/hurt_area_2d.gd" id="15_mx1mn"]
[ext_resource type="Script" uid="uid://djfsh4o1swvg5" path="res://scripts/enemies/aborigine/attack.gd" id="16_aid20"]

[sub_resource type="SpriteFrames" id="SpriteFrames_7kcsi"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_gxs31")
}, {
"duration": 1.0,
"texture": ExtResource("3_aid20")
}, {
"duration": 1.0,
"texture": ExtResource("4_6hb6d")
}, {
"duration": 1.0,
"texture": ExtResource("5_mx1mn")
}],
"loop": false,
"name": &"attack",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_7kcsi")
}, {
"duration": 1.0,
"texture": ExtResource("3_r8o2p")
}, {
"duration": 1.0,
"texture": ExtResource("4_0w2yq")
}, {
"duration": 1.0,
"texture": ExtResource("5_6uft3")
}],
"loop": true,
"name": &"defend",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_r7lj0")
}, {
"duration": 1.0,
"texture": ExtResource("3_jjugc")
}, {
"duration": 1.0,
"texture": ExtResource("4_s13fs")
}, {
"duration": 1.0,
"texture": ExtResource("5_2c7xa")
}],
"loop": true,
"name": &"normal",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mx1mn"]
size = Vector2(100, 18)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_mx1mn"]
radius = 18.7009
height = 53.7725

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_kadl6"]
radius = 14.8915
height = 58.0723

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kadl6"]
size = Vector2(52.1192, 53.981)

[node name="BigAborigine" type="CharacterBody2D"]
collision_layer = 0
script = ExtResource("1_xyea8")
health = 300.0
spike = 150.0
movement_speed = 0.0
metadata/_custom_type_script = "uid://da4xpmamo1d7r"

[node name="Direction" type="Node2D" parent="."]
scale = Vector2(-1, 1)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Direction"]
modulate = Color(1, 0.647059, 0, 1)
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_7kcsi")
animation = &"defend"

[node name="DetectRayCast2D" type="RayCast2D" parent="Direction"]
position = Vector2(0, 23)
target_position = Vector2(100, 0)
collision_mask = 60
collide_with_areas = true

[node name="HitArea2D" type="Area2D" parent="Direction"]
collision_layer = 0
collision_mask = 36
script = ExtResource("14_6hb6d")
metadata/_custom_type_script = "uid://dkb25vr64v37l"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Direction/HitArea2D"]
position = Vector2(50, 19)
shape = SubResource("RectangleShape2D_mx1mn")
disabled = true

[node name="HurtArea2D" type="Area2D" parent="Direction"]
collision_layer = 0
collision_mask = 4
script = ExtResource("15_mx1mn")
metadata/_custom_type_script = "uid://cofkmvw2auxcs"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Direction/HurtArea2D"]
position = Vector2(-8.52585, 6.80601)
shape = SubResource("CapsuleShape2D_mx1mn")

[node name="Shield" type="StaticBody2D" parent="Direction"]
collision_layer = 88
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Direction/Shield"]
position = Vector2(17.1084, 4.96057)
shape = SubResource("CapsuleShape2D_kadl6")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.0239887, 7.00865)
shape = SubResource("RectangleShape2D_kadl6")

[node name="States" type="Node" parent="."]

[node name="Normal" type="Node" parent="States"]
script = ExtResource("10_vovk7")

[node name="Defend" type="Node" parent="States"]
script = ExtResource("11_r8o2p")

[node name="Attack" type="Node" parent="States"]
script = ExtResource("16_aid20")

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true

[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
